Added PlantUML plugin for structurizr markdown

--- a/archup/template/docker-compose.yaml
+++ b/archup/template/docker-compose.yaml
@@ -5,4 +5,4 @@ services:
       - 8081:8080
     volumes:
       - ./src:/usr/local/structurizr
-      #- ./plugins:/usr/local/structurizr/plugins
+      - ./.structurizr-plugins:/usr/local/structurizr/plugins
